--- a/neuron/pom.xml
+++ b/neuron/pom.xml
@@ -34,6 +34,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-funqy-http</artifactId>
     </dependency>
     <dependency>
