--- a/neuron/pom.xml
+++ b/neuron/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>quarkus-funqy-knative-events</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.4</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
     </dependency>
